<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_white"
    tools:context="com.example.android.basketballscoretracker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2f7869"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/score_tracker"
            android:textAllCaps="false"
            android:textColor="@color/transparent_white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#378a79"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/game_name"
            android:textColor="@color/transparent_white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="110dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_one_win_lose_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/win_lose_message"
                android:textColor="#b73e0a"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_one_name"
                android:textColor="#3d9d89"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:src="@drawable/froyo" />

            <TextView
                android:id="@+id/team_one_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_one_score"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addThreePointsForTeamOne"
                android:text="@string/add_3_points_button"
                android:textColor="@color/transparent_white"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addTwoPointsForTeamOne"
                android:text="@string/add_2_points_button"

                android:textColor="@color/transparent_white"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addOnePointForTeamOne"
                android:text="@string/add_free_throw_button"

                android:textColor="@color/transparent_white"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="95dp"
            android:layout_marginTop="75dp"
            android:background="#b73e0a" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_two_win_lose_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/win_lose_message"
                android:textColor="#b73e0a"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_two_name"
                android:textColor="#3d9d89"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:src="@drawable/oreo" />

            <TextView
                android:id="@+id/team_two_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_two_score"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addThreePointsForTeamTwo"
                android:text="@string/add_3_points_button"
                android:textColor="@color/transparent_white"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addTwoPointsForTeamTwo"
                android:text="@string/add_2_points_button"
                android:textColor="@color/transparent_white"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="addOnePointForTeamTwo"
                android:text="@string/add_free_throw_button"
                android:textColor="@color/transparent_white"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#b73e0a"
            android:onClick="resetScore"
            android:text="@string/reset_button"
            android:textColor="@color/transparent_white"
            android:textSize="15sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#b73e0a"
            android:onClick="gameOver"
            android:text="@string/game_over_button"
            android:textColor="@color/transparent_white"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>